fix(core): preserve Token-2022 metadata order
Retain ordered additional metadata and reject duplicate nonzero TLV types that cannot be represented losslessly. Expand pinned SPL fixtures with paired metadata vectors.